force-app/main/default/objects/Presales_Funding_Request__c/Presales_Funding_Request__c.object-meta.xml
<CustomObject>
    <description>Used by Account Executive to request funding for a presales resource.</description>
    <label>Presales Funding Request</label>
    <nameField>
        <displayFormat>PFR-{0000}</displayFormat>
        <label>PFR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Funding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>