force-app/main/default/objects/Presales_Funding_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account is only mandatory, when PreSales Category is &quot;6-Non-Standard Gratis work / Customer satisfaction issue&quot;</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presales Funding Requests</relationshipLabel>
    <relationshipName>Presales_Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>