force-app/main/default/objects/Presales_Funding_Request__c/fields/Cloud_Products__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Products__c</fullName>
    <formula>PFR_Opportunity__r.Cloud_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>