force-app/main/default/objects/Presales_Funding_Request__c/fields/Division_of_User__c.field-meta.xml
<CustomField>
    <fullName>Division_of_User__c</fullName>
    <formula>IF(Owner:User.UserRole.Name !=null, Owner:User.UserRole.Name, &apos;null&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division of User</label>
    <type>Text</type>
</CustomField>