force-app/main/default/objects/Presales_Funding_Request__c/fields/Fund_Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Fund_Request_Owner__c</fullName>
    <label>Fund Request Owner</label>
    <type>Email</type>
</CustomField>