force-app/main/default/objects/Presales_Funding_Request__c/fields/Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources__c</fullName>
    <label>Number of Resources</label>
    <summaryForeignKey>Resource__c.PSFundingRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>