force-app/main/default/objects/Presales_Funding_Request__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <type>Email</type>
</CustomField>