force-app/main/default/objects/Presales_Funding_Request__c/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <label>Opportunity Owner Manager</label>
    <type>Email</type>
</CustomField>