force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR1_Expected_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>PFR1_Expected_Book_Date__c</fullName>
    <formula>PFR_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Book Date</label>
    <type>Date</type>
</CustomField>