force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PFR_Account_Name__c</fullName>
    <formula>PFR_Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>