force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>PFR_Approval_Number__c</fullName>
    <label>Approval Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>