force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>PFR_Expected_Date__c</fullName>
    <description>Expected start date of request</description>
    <inlineHelpText>Expected start date of request</inlineHelpText>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>