force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>PFR_Forecast_Category__c</fullName>
    <formula>TEXT(PFR_Opportunity__r.Forecast_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>