force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Hardware_Products__c.field-meta.xml
<CustomField>
    <fullName>PFR_Hardware_Products__c</fullName>
    <formula>PFR_Opportunity__r.Hardware_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware-Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>