force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Is_this_Recoverable__c.field-meta.xml
<CustomField>
    <fullName>PFR_Is_this_Recoverable__c</fullName>
    <label>Is this Recoverable?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>