force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Justification__c.field-meta.xml
<CustomField>
    <fullName>PFR_Justification__c</fullName>
    <label>Justification</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>