force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>PFR_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity associated with funding request</description>
    <inlineHelpText>Opportunity associated with funding request</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Presales Funding Requests</relationshipLabel>
    <relationshipName>Presales_Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>