force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>PFR_Opportunity_Amount__c</fullName>
    <formula>PFR_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>