force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>PFR_Opportunity_Number__c</fullName>
    <formula>PFR_Opportunity__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>