force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>PFR_Opportunity_Owner__c</fullName>
    <formula>PFR_Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp;  PFR_Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>