force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Opportunity_Selling_Stage__c.field-meta.xml
<CustomField>
    <fullName>PFR_Opportunity_Selling_Stage__c</fullName>
    <formula>TEXT(PFR_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Selling Stage</label>
    <type>Text</type>
</CustomField>