force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Presales_Category__c.field-meta.xml
<CustomField>
    <fullName>PFR_Presales_Category__c</fullName>
    <label>Presales Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Network Certification</fullName>
            </value>
            <value>
                <fullName>2-Early Stage Presales</fullName>
            </value>
            <value>
                <fullName>3- Proof of Concept</fullName>
            </value>
            <value>
                <fullName>4-PS SOW Creation &amp; Pricing</fullName>
            </value>
            <value>
                <fullName>5-PS work-ahead pending SOW signature</fullName>
            </value>
            <value>
                <fullName>6-Non-Standard Gratis work / Customer satisfaction issue</fullName>
            </value>
            <value>
                <fullName>1- Network Certification</fullName>
                <isActive>false</isActive>
                <label>1- Network Certification</label>
            </value>
            <value>
                <fullName>2- Early Stage Presales</fullName>
                <isActive>false</isActive>
                <label>2- Early Stage Presales</label>
            </value>
            <value>
                <fullName>4- PS SOW Creation &amp; Pricing</fullName>
                <isActive>false</isActive>
                <label>4- PS SOW Creation &amp; Pricing</label>
            </value>
            <value>
                <fullName>5- PS &apos;work-ahead&apos;, pending SOW signature</fullName>
                <isActive>false</isActive>
                <label>5- PS &apos;work-ahead&apos;, pending SOW signature</label>
            </value>
            <value>
                <fullName>6- Non-Standard Gratis work / Customer satisfaction issue</fullName>
                <isActive>false</isActive>
                <label>6- Non-Standard Gratis work / Customer satisfaction issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>