force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>PFR_Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assigned Sales Engineer</inlineHelpText>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Presales_Funding_Requests</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>