force-app/main/default/objects/Presales_Funding_Request__c/fields/PFR_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>PFR_Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>