force-app/main/default/objects/Presales_Funding_Request__c/fields/PS_Product__c.field-meta.xml
<CustomField>
    <fullName>PS_Product__c</fullName>
    <formula>PFR_Opportunity__r.PS_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>