force-app/main/default/objects/Presales_Funding_Request__c/fields/PS_Rec_Authentication_Email__c.field-meta.xml
<CustomField>
    <fullName>PS_Rec_Authentication_Email__c</fullName>
    <label>PS_Rec_Authentication_Email</label>
    <type>Email</type>
</CustomField>