force-app/main/default/objects/Presales_Funding_Request__c/fields/PS_Team_User3__c.field-meta.xml
<CustomField>
    <fullName>PS_Team_User3__c</fullName>
    <label>PS Team User3</label>
    <type>Email</type>
</CustomField>