force-app/main/default/objects/Presales_Funding_Request__c/fields/PSFR_Authentication_Token_Text__c.field-meta.xml
<CustomField>
    <fullName>PSFR_Authentication_Token_Text__c</fullName>
    <label>PSFR_Authentication_Token_Text</label>
    <length>150</length>
    <type>Text</type>
</CustomField>