force-app/main/default/objects/Presales_Funding_Request__c/fields/PSFR_Authentication_Trigger__c.field-meta.xml
<CustomField>
    <fullName>PSFR_Authentication_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSFR_Authentication_Trigger</label>
    <type>Checkbox</type>
</CustomField>