force-app/main/default/objects/Presales_Funding_Request__c/fields/PSFR_PSANumber__c.field-meta.xml
<CustomField>
    <fullName>PSFR_PSANumber__c</fullName>
    <label>PSA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>