force-app/main/default/objects/Presales_Funding_Request__c/fields/PSFR_Rec_Authentication_Token__c.field-meta.xml
<CustomField>
    <fullName>PSFR_Rec_Authentication_Token__c</fullName>
    <label>PSFR_Rec_Authentication_Token</label>
    <length>150</length>
    <type>Text</type>
</CustomField>