force-app/main/default/objects/Presales_Funding_Request__c/fields/PSFR_Trigger_Controller_RET__c.field-meta.xml
<CustomField>
    <fullName>PSFR_Trigger_Controller_RET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSFR_Trigger_Controller_RET</label>
    <type>Checkbox</type>
</CustomField>