force-app/main/default/objects/Presales_Funding_Request__c/fields/Query_User1__c.field-meta.xml
<CustomField>
    <fullName>Query_User1__c</fullName>
    <label>Query_User1</label>
    <type>Email</type>
</CustomField>