force-app/main/default/objects/Presales_Funding_Request__c/fields/Query_User2__c.field-meta.xml
<CustomField>
    <fullName>Query_User2__c</fullName>
    <label>Query_User2</label>
    <type>Email</type>
</CustomField>