force-app/main/default/objects/Presales_Funding_Request__c/fields/Query_User3__c.field-meta.xml
<CustomField>
    <fullName>Query_User3__c</fullName>
    <label>Query_User3</label>
    <type>Email</type>
</CustomField>