force-app/main/default/objects/Presales_Funding_Request__c/fields/R_Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>R_Sales_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically updated, only in Retail Presales Funding Request</description>
    <label>Sub Region Sales Leader_Retail</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Presales_Funding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>