force-app/main/default/objects/Presales_Funding_Request__c/fields/Raise_Objection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Raise_Objection_Comments__c</fullName>
    <label>Raise Objection Comments</label>
    <type>TextArea</type>
</CustomField>