force-app/main/default/objects/Presales_Funding_Request__c/fields/Raised_Objection_Status__c.field-meta.xml
<CustomField>
    <fullName>Raised_Objection_Status__c</fullName>
    <label>Raised Objection Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>