force-app/main/default/objects/Presales_Funding_Request__c/fields/Record_Creator__c.field-meta.xml
<CustomField>
    <fullName>Record_Creator__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Creator</label>
    <type>Text</type>
</CustomField>