force-app/main/default/objects/Presales_Funding_Request__c/fields/Recoverable__c.field-meta.xml
<CustomField>
    <fullName>Recoverable__c</fullName>
    <formula>IF(Text(PFR_Is_this_Recoverable__c) = &apos;Yes&apos;, &apos;R&apos;, &apos;N&apos; )</formula>
    <label>Recoverable ?</label>
    <type>Text</type>
</CustomField>