force-app/main/default/objects/Presales_Funding_Request__c/fields/Resource_S__c.field-meta.xml
<CustomField>
    <fullName>Resource_S__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource_S</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Presales Funding Requests</relationshipLabel>
    <relationshipName>Presales_Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>