force-app/main/default/objects/Presales_Funding_Request__c/fields/Sub_Region_Sales_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region_Sales_Leader_Email__c</fullName>
    <label>Sub Region Sales Leader Email</label>
    <type>Email</type>
</CustomField>