force-app/main/default/objects/Presales_Funding_Request__c/fields/Total_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Hourly_Rate__c</fullName>
    <label>Total Hourly Rate</label>
    <summarizedField>Resource__c.PFR_Daily_Rate_USD__c</summarizedField>
    <summaryForeignKey>Resource__c.PSFundingRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>