force-app/main/default/objects/Presales_Funding_Request__c/fields/Total_Hours_not_to_exceed__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_not_to_exceed__c</fullName>
    <label>Total Hours not to exceed</label>
    <summarizedField>Resource__c.PFR_Num_of_days_not_to_exceed__c</summarizedField>
    <summaryForeignKey>Resource__c.PSFundingRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>