force-app/main/default/objects/Presales_Funding_Request__c/fields/Total_Travel_Cost_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Cost_of_Resources__c</fullName>
    <label>Total Travel Cost of Resources</label>
    <summarizedField>Resource__c.PFR_Travel_Cost__c</summarizedField>
    <summaryForeignKey>Resource__c.PSFundingRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>