force-app/main/default/objects/Presales_Funding_Request__c/fields/Total_Value_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Resources__c</fullName>
    <label>Total Value of Resources</label>
    <summarizedField>Resource__c.PFR_Total__c</summarizedField>
    <summaryForeignKey>Resource__c.PSFundingRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>