force-app/main/default/objects/Presales_Funding_Request__c/fields/TriggerController__c.field-meta.xml
<CustomField>
    <fullName>TriggerController__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerController</label>
    <type>Checkbox</type>
</CustomField>