force-app/main/default/objects/Presales_Funding_Request__c/validationRules/Expected_start_Date_not_backdated.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_start_Date_not_backdated</fullName>
    <active>true</active>
    <description>Expected book date should not be back dated</description>
    <errorConditionFormula>AND(PFR_Expected_Date__c &lt; today(),Text(Approval_Status__c) = &apos;New&apos;)</errorConditionFormula>
    <errorDisplayField>PFR_Expected_Date__c</errorDisplayField>
    <errorMessage>Expected start date cannot be back dated.</errorMessage>
</ValidationRule>