force-app/main/default/objects/Presales_Funding_Request__c/validationRules/Opportunity_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Mandatory</fullName>
    <active>true</active>
    <description>If PreSales Category below, Opportunity is Mandatory


2-Early Stage Presales
3- Proof of Concept
4-PS SOW Creation &amp; Pricing
5-PS &apos;work-ahead&apos; pending SOW signature</description>
    <errorConditionFormula>OR(
AND(
Text(PFR_Presales_Category__c) = &apos;2-Early Stage Presales&apos;,
 PFR_Opportunity__c =null),
AND(Text(PFR_Presales_Category__c) = &apos;3- Proof of Concept&apos;,
PFR_Opportunity__c =null),
AND(Text(PFR_Presales_Category__c) = &apos;4-PS SOW Creation &amp; Pricing&apos;,PFR_Opportunity__c =null),AND(Text(PFR_Presales_Category__c) = &apos;5-PS work-ahead pending SOW signature&apos;,PFR_Opportunity__c =null))</errorConditionFormula>
    <errorDisplayField>PFR_Opportunity__c</errorDisplayField>
    <errorMessage>Opportunity is Mandatory</errorMessage>
</ValidationRule>