force-app/main/default/objects/Presales_Funding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PFR_Opportunity__c</columns>
    <columns>Region__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>PFR_Is_this_Recoverable__c</columns>
    <columns>PFR_Justification__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division_of_User__c</field>
        <operation>contains</operation>
        <value>FIN</value>
    </filters>
    <label>FIN - All PreSales Funding Request</label>
    <sharedTo>
        <role>FINThailand</role>
        <role>FIN_CHINA_HK_TAIWAN</role>
        <role>FIN_CHINA_HK_TAIWAN_MGR</role>
        <role>FIN_CHINA_OVERLAY</role>
        <role>FIN_CHINA_TEAM1</role>
        <role>FIN_CHINA_TEAM1_MGR</role>
        <role>FIN_CHINA_TEAM2</role>
        <role>FIN_CHINA_TEAM2_MGR</role>
        <role>FIN_CHINA_TEAM3</role>
        <role>FIN_CHINA_TEAM3_MGR</role>
        <role>FIN_CHINA_VP</role>
        <role>FIN_CLABR</role>
        <role>FIN_CLABR_ARG</role>
        <role>FIN_CLABR_ARG_MGR</role>
        <role>FIN_CLABR_ARG_OVERLAY</role>
        <role>FIN_CLABR_BRAZIL</role>
        <role>FIN_CLABR_BRAZIL_MGR</role>
        <role>FIN_CLABR_BRAZIL_OVERLAY</role>
        <role>FIN_CLABR_CHANNEL</role>
        <role>FIN_CLABR_CHANNEL_MGR</role>
        <role>FIN_CLABR_CHANNEL_OVERLAY</role>
        <role>FIN_CLABR_CHILE</role>
        <role>FIN_CLABR_CHILE_MGR</role>
        <role>FIN_CLABR_COL</role>
        <role>FIN_CLABR_COL_MGR</role>
        <role>FIN_CLABR_MEX</role>
        <role>FIN_CLABR_MEX_MGR</role>
        <role>FIN_CLABR_OVERLAY</role>
        <role>FIN_CLABR_PERU</role>
        <role>FIN_CLABR_PERU_MGR</role>
        <role>FIN_CLABR_VP</role>
        <role>FIN_EUR_DACH_AUSTRIA</role>
        <role>FIN_EUR_DACH_CORE_AND_MICRO</role>
        <role>FIN_EUR_DACH_CORE_AND_MICRO_MGR</role>
        <role>FIN_EUR_DACH_DATA_CTR</role>
        <role>FIN_EUR_DACH_DATA_CTR_MGR</role>
        <role>FIN_EUR_DACH_DIRECTOR</role>
        <role>FIN_EUR_DACH_LARGE_ACCTS</role>
        <role>FIN_EUR_DACH_LARGE_ACCTS_MGR</role>
        <role>FIN_EUR_DACH_MGR</role>
        <role>FIN_EUR_DACH_SWITZ</role>
        <role>FIN_EUR_DACH_SWITZ_MGR</role>
        <role>FIN_EUR_EMERG_CHANNEL</role>
        <role>FIN_EUR_EMERG_CHANNEL_AND_PRINTEC</role>
        <role>FIN_EUR_EMERG_CZECH</role>
        <role>FIN_EUR_EMERG_CZECH_MGR</role>
        <role>FIN_EUR_EMERG_DIRECTOR</role>
        <role>FIN_EUR_EMERG_HUNGARY</role>
        <role>FIN_EUR_EMERG_HUNGARY_CHANNEL_AND_PRINTEC_MGR</role>
        <role>FIN_EUR_EMERG_POLAND</role>
        <role>FIN_EUR_FRBE_BELG</role>
        <role>FIN_EUR_FRBE_DIRECTOR</role>
        <role>FIN_EUR_FRBE_FRANCE</role>
        <role>FIN_EUR_FRBE_FRANCE_MGR</role>
        <role>FIN_EUR_FRBE_OVERLAY</role>
        <role>FIN_EUR_ITALY</role>
        <role>FIN_EUR_ITALY_CHANNEL</role>
        <role>FIN_EUR_ITALY_OVERLAY</role>
        <role>FIN_EUR_NL_NORDICS_CHANNEL</role>
        <role>FIN_EUR_NL_NORDICS_DIRECTOR</role>
        <role>FIN_EUR_NL_NORDICS_NETHERLANDS</role>
        <role>FIN_EUR_NL_NORDICS_NORDICS</role>
        <role>FIN_EUR_OVERLAY</role>
        <role>FIN_EUR_OVERLAY_MGR</role>
        <role>FIN_EUR_RUSSIA</role>
        <role>FIN_EUR_RUSSIA_CHANNEL</role>
        <role>FIN_EUR_RUSSIA_MGR</role>
        <role>FIN_EUR_RUSSIA_OVERLAY</role>
        <role>FIN_EUR_RUSSIA_STATEBANK</role>
        <role>FIN_EUR_RUSSIA_UKRAINE</role>
        <role>FIN_EUR_SPAIN</role>
        <role>FIN_EUR_SPAIN_DIRECTOR</role>
        <role>FIN_EUR_TURKEY</role>
        <role>FIN_EUR_TURKEY_DIRECTOR</role>
        <role>FIN_EUR_TURKEY_MK</role>
        <role>FIN_EUR_TURKEY_MK_MGR</role>
        <role>FIN_EUR_TURKEY_OVERLAY</role>
        <role>FIN_EUR_UK_DIRECTOR</role>
        <role>FIN_EUR_UK_GLOBAL_AND_MAJOR</role>
        <role>FIN_EUR_UK_IRELAND</role>
        <role>FIN_EUR_UK_LBG_SAINS_TSB</role>
        <role>FIN_EUR_UK_NATIONWIDE_DEV</role>
        <role>FIN_EUR_UK_OVERLAY</role>
        <role>FIN_EUR_UK_SCOTLAND</role>
        <role>FIN_EUR_UK_SCOTLAND_MGR</role>
        <role>FIN_EUR_VP</role>
        <role>FIN_GLOBAL_VP</role>
        <role>FIN_IMEA_AFR_EGY</role>
        <role>FIN_IMEA_AFR_EGY_MGR</role>
        <role>FIN_IMEA_AFR_EGY_ZIM</role>
        <role>FIN_IMEA_AFR_JOR</role>
        <role>FIN_IMEA_AFR_KEN</role>
        <role>FIN_IMEA_AFR_LEB</role>
        <role>FIN_IMEA_AFR_OVERLAY_MGR</role>
        <role>FIN_IMEA_AFR_TEAM2_MGR</role>
        <role>FIN_IMEA_AFR_TEAM4</role>
        <role>FIN_IMEA_AFR_TEAM4_MGR</role>
        <role>FIN_IMEA_CHANNELS</role>
        <role>FIN_IMEA_CHANNELS_MGR</role>
        <role>FIN_IMEA_GULF_ADH</role>
        <role>FIN_IMEA_GULF_ADH_MGR</role>
        <role>FIN_IMEA_GULF_BAH</role>
        <role>FIN_IMEA_GULF_DIRECTOR</role>
        <role>FIN_IMEA_GULF_DUB</role>
        <role>FIN_IMEA_GULF_KUW</role>
        <role>FIN_IMEA_GULF_KUW_MGR</role>
        <role>FIN_IMEA_GULF_OMA</role>
        <role>FIN_IMEA_GULF_OMA_MGR</role>
        <role>FIN_IMEA_GULF_QAT</role>
        <role>FIN_IMEA_GULF_QAT_MGR</role>
        <role>FIN_IMEA_IND</role>
        <role>FIN_IMEA_IND_DIRECTOR</role>
        <role>FIN_IMEA_IND_OVERLAY</role>
        <role>FIN_IMEA_IND_TEAM1</role>
        <role>FIN_IMEA_IND_TEAM1_MGR</role>
        <role>FIN_IMEA_IND_TEAM2</role>
        <role>FIN_IMEA_IND_TEAM2_MGR</role>
        <role>FIN_IMEA_KSA</role>
        <role>FIN_IMEA_KSA_MGR</role>
        <role>FIN_IMEA_NEARE_CYP</role>
        <role>FIN_IMEA_NEARE_CYP_MGR</role>
        <role>FIN_IMEA_NEARE_DIRECTOR</role>
        <role>FIN_IMEA_NEARE_GHANA</role>
        <role>FIN_IMEA_NEARE_GREECE</role>
        <role>FIN_IMEA_NEARE_NIG</role>
        <role>FIN_IMEA_NEARE_NIG_MGR</role>
        <role>FIN_IMEA_OVERLAY</role>
        <role>FIN_IMEA_PAK</role>
        <role>FIN_IMEA_PAK_MGR</role>
        <role>FIN_IMEA_SERVICE</role>
        <role>FIN_IMEA_SERVICE_MGR</role>
        <role>FIN_IMEA_S_AFR_CHANNELS</role>
        <role>FIN_IMEA_VP</role>
        <role>FIN_JAPAN</role>
        <role>FIN_JAPAN_OVERLAY</role>
        <role>FIN_JAPAN_TEAM1</role>
        <role>FIN_JAPAN_TEAM1_MGR</role>
        <role>FIN_JAPAN_TEAM2</role>
        <role>FIN_JAPAN_TEAM2_MGR</role>
        <role>FIN_NAMER</role>
        <role>FIN_NAMER_CFI_CENTRAL</role>
        <role>FIN_NAMER_CFI_CENTRAL_MGR</role>
        <role>FIN_NAMER_CFI_CHANNEL</role>
        <role>FIN_NAMER_CFI_CHANNEL_MANAGER</role>
        <role>FIN_NAMER_CFI_CONTRACT_ADMIN</role>
        <role>FIN_NAMER_CFI_CONVERSION_MGR</role>
        <role>FIN_NAMER_CFI_MIDATLANTIC</role>
        <role>FIN_NAMER_CFI_MIDATLANTIC_MGR</role>
        <role>FIN_NAMER_CFI_MOUNT</role>
        <role>FIN_NAMER_CFI_MOUNT_MGR</role>
        <role>FIN_NAMER_CFI_NE</role>
        <role>FIN_NAMER_CFI_NE_MGR</role>
        <role>FIN_NAMER_CFI_OVERLAY</role>
        <role>FIN_NAMER_CFI_RME</role>
        <role>FIN_NAMER_CFI_RME_MGR</role>
        <role>FIN_NAMER_CFI_RME_TEAMCONNECT</role>
        <role>FIN_NAMER_CFI_RME_TEAMCONNECT_MGR</role>
        <role>FIN_NAMER_CFI_RMW</role>
        <role>FIN_NAMER_CFI_RMW_MGR</role>
        <role>FIN_NAMER_CFI_SC</role>
        <role>FIN_NAMER_CFI_SC_MGR</role>
        <role>FIN_NAMER_CFI_SDL_MGR</role>
        <role>FIN_NAMER_CFI_SE</role>
        <role>FIN_NAMER_CFI_SE_MGR</role>
        <role>FIN_NAMER_CFI_SW</role>
        <role>FIN_NAMER_CFI_SW_MGR</role>
        <role>FIN_NAMER_CFI_VP</role>
        <role>FIN_NAMER_CFI_WEST</role>
        <role>FIN_NAMER_CFI_WEST_MGR</role>
        <role>FIN_NAMER_MAJORS_BOA</role>
        <role>FIN_NAMER_MAJORS_BOA_MGR</role>
        <role>FIN_NAMER_MAJORS_CAN_DIRECTOR</role>
        <role>FIN_NAMER_MAJORS_CAN_RBC</role>
        <role>FIN_NAMER_MAJORS_CAN_TEAM1</role>
        <role>FIN_NAMER_MAJORS_CAN_TEAM1_MGR</role>
        <role>FIN_NAMER_MAJORS_CAN_TEAM2</role>
        <role>FIN_NAMER_MAJORS_CITI_MGR</role>
        <role>FIN_NAMER_MAJORS_CRDTRNCS</role>
        <role>FIN_NAMER_MAJORS_CRDTRNCS_MGR</role>
        <role>FIN_NAMER_MAJORS_JPMC_CITI_PNC</role>
        <role>FIN_NAMER_MAJORS_JPMC_CITI_PNC_MGR</role>
        <role>FIN_NAMER_MAJORS_MID_WEST</role>
        <role>FIN_NAMER_MAJORS_MID_WEST_MGR</role>
        <role>FIN_NAMER_MAJORS_NE</role>
        <role>FIN_NAMER_MAJORS_NE_MGR</role>
        <role>FIN_NAMER_MAJORS_OVERLAY</role>
        <role>FIN_NAMER_MAJORS_OVERLAY_MGR</role>
        <role>FIN_NAMER_MAJORS_SE</role>
        <role>FIN_NAMER_MAJORS_SE_MGR</role>
        <role>FIN_NAMER_MAJORS_VP</role>
        <role>FIN_NAMER_MAJORS_WF</role>
        <role>FIN_NAMER_MAJORS_WF_MGR</role>
        <role>FIN_NAMER_OVERLAY</role>
        <role>FIN_NAMER_SDL_Team</role>
        <role>FIN_OVERLAY_MGR</role>
        <role>FIN_PRESALES</role>
        <role>FIN_PRESALES_DIR</role>
        <role>FIN_PRESALES_VP</role>
        <role>FIN_SAPAC_AU_CHANNEL</role>
        <role>FIN_SAPAC_INDO</role>
        <role>FIN_SAPAC_INDO_CHANNEL</role>
        <role>FIN_SAPAC_INDO_MGR</role>
        <role>FIN_SAPAC_MY</role>
        <role>FIN_SAPAC_MY_MGR</role>
        <role>FIN_SAPAC_NZ_MGR</role>
        <role>FIN_SAPAC_OVERLAY</role>
        <role>FIN_SAPAC_OVERLAY_MGR</role>
        <role>FIN_SAPAC_PH</role>
        <role>FIN_SAPAC_SING</role>
        <role>FIN_SAPAC_SING_CHANNEL</role>
        <role>FIN_SAPAC_SING_MGR</role>
        <role>FIN_SAPAC_SPA_AU</role>
        <role>FIN_SAPAC_SPA_MGR</role>
        <role>FIN_SAPAC_SPA_NZ</role>
        <role>FIN_SAPAC_THAI_MGR</role>
        <role>FIN_SAPAC_VP</role>
        <role>FIN_UK_Global</role>
    </sharedTo>
</ListView>